--- a/four.html
+++ b/four.html
@@ -41,7 +41,7 @@
       </article>
 
       <div class="image-container">
-        <img src="./images/orion.jpg" alt="Orion spaceship">
+        <img src="./images/02/Orion.png" alt="Orion spaceship">
       </div>
     </div>
   </main>
