loading eager applied

--- a/four.html
+++ b/four.html
@@ -37,7 +37,7 @@
       <button aria-selected="false" onclick="window.location.href='five.html';"></button>
       <button aria-selected="false" onclick="window.location.href='six.html';"></button>
     </div></div>
-    <div><img src="./images/02/Orion.png"></div>
+    <div><img src="./images/02/Orion.png" loading="eager"></div>
 
   </main>
 
