--- a/five.html
+++ b/five.html
@@ -37,7 +37,7 @@
       <button aria-selected="true" onclick="window.location.href='five.html';"></button>
       <button aria-selected="false" onclick="window.location.href='six.html';"></button>
     </div></div>
-    <div><img src="./images/02/clipper.png" alt="Clipper Spaceship" width="auto" height="600" loading="eager"></div>
+    <div style="padding-left:8em; text-align: center"><img src="./images/02/clipper.png" alt="Clipper Spaceship" width="auto" height="600" loading="eager"></div>
 
   </main>
 
