--- a/four.html
+++ b/four.html
@@ -1,4 +1,7 @@
-<html lang="en"><!--Ships: Orion--><head>
+<!DOCTYPE html>
+<html lang="en">
+<!--Ships: Orion-->
+<head>
   <link rel="stylesheet" href="webstyle.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-modified.png">
 
   <title>Solar</title>
-<style type="text/css" id="operaUserStyle"></style></head>
+</head>
 
 <body class="crew">
   <header class="primary-header flex">
@@ -17,15 +20,15 @@
     <nav>
       <ul id="primary-navigation" class="primary-navigation underline-indicators flex">
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span>00</span>Home</a>
-        </li><li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="one.html"><span>01</span>Moons</a>
-        </li><li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="two.html"><span>02</span>Ships</a>
-        </li><li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="404.html"><span></span>404</a>
-      </li></ul>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="one.html"><span>01</span>Moons</a>
+        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="two.html"><span>02</span>Ships</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="404.html"><span></span>404</a>
+      </ul>
     </nav>
   </header>
 
-  <main id="main" class="grid-container grid-container--destination flow">
-   <p> </p>
+  <main id="main" class="grid-container grid-container--crew flow">
+    <p> </p>
     <div><h1 class="numbered-title"><span aria-hidden="true">02</span> Meet your spaceships<br><br></h1> <article class="crew-details flow">
       <header class="flow flow--space-small">
         <h2 class="fs-600 ff-serif uppercase">Moon</h2>
@@ -45,6 +48,6 @@
     <div>©2024 Muskan Manwani</div>
     <div class="email">mmanwani@uoguelph.ca</div>
   </footer>
+</body>
 
-
-</body></html>
+</html>
