--- a/six.html
+++ b/six.html
@@ -40,7 +40,7 @@
       <button aria-selected="false" onclick="window.location.href='five.html';"></button>
       <button aria-selected="true" onclick="window.location.href='six.html';"></button>
     </div></div>
-    <div><img src="./images/02/Orion.png" alt = "Orion spaceship" width="auto" height="600" loading="eager"></div>
+    <div><img src="./images/02/huygens.png" alt = "Orion spaceship" width="auto" height="600" loading="eager"></div>
 
   </main>
 
