--- a/six.html
+++ b/six.html
@@ -40,10 +40,10 @@
       <button aria-selected="false" onclick="window.location.href='five.html';"></button>
       <button aria-selected="true" onclick="window.location.href='six.html';"></button>
     </div></div>
-    <div><img src="./images/02/huygens.png" alt = "Orion spaceship" width="auto" height="600" loading="eager"></div>
+    <div><img src="./images/02/huygens.png" alt = "Orion spaceship" width=800 height=auto loading="eager"></div>
 
   </main>
-
+  <br>
   <footer class="footer flex">
     <div>©2024 Muskan Manwani</div>
     <div class="email">mmanwani@uoguelph.ca</div>
